--- a/_data/work-xp.yml
+++ b/_data/work-xp.yml
@@ -13,7 +13,7 @@
   image-contain: true
 
 - title: IUST Cloud Computing Center
-  body: I will soon start developing software systems for the [Cloud Computing Center of Iran University of Science and Technology](http://ccc.iust.ac.ir/) at its research labs,
+  body: I work for the [Cloud Computing Center of Iran University of Science and Technology](http://ccc.iust.ac.ir/), a research cloud lab
         supervised by [Dr Mehrdad Ashtiani](http://webpages.iust.ac.ir/m_ashtiani/).
   type: Part-Time
   website-url: http://ccc.iust.ac.ir
